--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             <img src="images/hassan.jpg" alt="">
         </div>
 </section>
-
+<section>
+    <div class="part-two"><img src="images/hassan1.jpg" alt=""></div>
+    <div class="part-two">
+        <h1>Dream Big</h1>
+        <h2>Become a <span class="web-color">web developer</span></h2>
+        <p>This is my second section in my first web page. I want learn more. Because I want become a web developer. This is my second section in my first web page. I want learn more. Because I want become a web developer. This is my second section in my first web page. I want learn more. Because I want become a web developer. This is my second section in my first web page. I want learn more. Because I want become a web developer.</p>
+        <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100090213249787">My Facebook Profile</a>
+    </div>
+</section>
 </body>
 </html>
