--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="images/hassan.jpg" alt="">
         </div>
 </section>
-<section>
+<section  class="dream-big">
     <div class="part-two"><img src="images/hassan1.jpg" alt=""></div>
     <div class="part-two">
         <h1>Dream Big</h1>
