--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange">Hassan's</span>  World!</h1>
@@ -23,14 +23,32 @@
             <img src="images/hassan.jpg" alt="">
         </div>
 </section>
-<section  class="dream-big">
-    <div class="part-two"><img src="images/hassan1.jpg" alt=""></div>
-    <div class="part-two">
+<section  class="dream-big flexible-container">
+    <div class="half-width"><img src="images/hassan1.jpg" alt=""></div>
+    <div class="half-width">
         <h1>Dream Big</h1>
         <h2>Become a <span class="web-color">web developer</span></h2>
         <p>This is my second section in my first web page. I want learn more. Because I want become a web developer. This is my second section in my first web page. I want learn more. Because I want become a web developer. This is my second section in my first web page. I want learn more. Because I want become a web developer. This is my second section in my first web page. I want learn more. Because I want become a web developer.</p>
         <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100090213249787">My Facebook Profile</a>
     </div>
 </section>
+<section experience-area>
+        <h1>Experiences</h1>   
+    <div class="flexible-container">
+        <div id="full-stack-developer" class="experience-team">
+            <h1>Full stack Web Developer</h1>
+            <h2 class="orange">2021-Present|Pro Level Developer</h2>
+            <p>This is Al-Amin Hassan. I am from Lakshmipur. Right now I live in Dhaka. This is Al-Amin Hassan. I am from Lakshmipur. Right now I live in Dhaka.</p>
+        </div>
+        <div id="baby-web-developer" class="experience-team">
+            <h1>Baby Web Developer</h1> 
+            <h2 class="orange">2020-2021|Programming Hero Learner</h2>
+            <p>This is my second section in my first web page. I want learn more. Because I want become a web developer. This is my second section in my first web page. I want learn more. Because I want become a web developer.</p>
+        </div>
+    </div>
+</section>
 </body>
+<footer>
+    <p>@ Hassan's 2023, a Programming Hero initiative</p>
+</footer>
 </html>
